@@ -4,7 +4,9 @@ Changelog
 2.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Modify UIDMigrator so that it also works for items which 
+  provides IAttributeUUID.
+  [pabo]
 
 
 2.1.2 (2012-12-21)
